--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "A sample template for hosting node-hill servers.",
     "main": "start.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "nodemon ./start.js/"
     },
-    "author": "You",
+    "author": "Shigetorum635",
     "license": "ISC",
     "dependencies": {
         "chalk": "4.1.2",
